--- a/src/components/commons/Button/index.module.scss
+++ b/src/components/commons/Button/index.module.scss
@@ -9,6 +9,10 @@
         background-color 2s cubic-bezier(0.075, 0.82, 0.165, 1),
         transform 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 
+    &--disabled {
+        pointer-events: none;
+    }
+
     &:hover {
         padding: 10px 20px;
         background-color: #fff;
