--- a/src/components/commons/Input/index.module.scss
+++ b/src/components/commons/Input/index.module.scss
@@ -3,7 +3,7 @@
     --black: #030303;
     --grey: #f0f0f0;
     font-size: 14px;
-    width: calc(100% - 20px);
+    width: 100%;
     padding: 10px;
     border-radius: 2px;
     font-family: var(--poppins);
