--- a/public/styles/globals.scss
+++ b/public/styles/globals.scss
@@ -1,5 +1,3 @@
-// @import 'utils.scss';
-
 * {
     padding: 0;
     border: none;
@@ -36,20 +34,8 @@ img {
     }
 }
 
-.header {
-    display: flex;
-    justify-content: space-between;
-    align-items: end;
-}
-
 .home {
-    text-align: center;
-
     form {
-        display: flex;
-        justify-content: space-between;
-        gap: 20px;
-
         & > *:first-child {
             flex-grow: 1;
         }
@@ -61,5 +47,9 @@ img {
 
     h1 {
         font-size: 72px;
+
+        @media screen and (max-width: 600px) {
+            font-size: 50px;
+        }
     }
 }
